k8s/shlink/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shlink
  labels:
    app: shlink
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shlink
  template:
    metadata:
      name: shlink
      labels:
        app: shlink
    spec:
      containers:
        - name: shlink
          image: shlinkio/shlink:5.1.7@sha256:844e1f2b6455331c5b49207bad3a2455ccd65e62bb9daa09a6c57afff26bd9c8
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
              name: http
      restartPolicy: Always
