k8s/shlink/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shlink
spec:
  selector:
    app: shlink
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
